--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-z
 /* General styling */
 body {
   margin: 0;
@@ -94,10 +93,35 @@ body {
 .swap-box span {
   font-size: 12px;
   color: #ff6347;
+  font-weight: bolder;
 }
 .warning {
   color: #c4ab1e;
   font-size: 12px;
+}
+a {
+  color: gainsboro;
+  font-weight: bold;
+}
+input::placeholder {
+  color: rgb(237, 237, 250);
+  opacity: 0.4;
+}
+.line {
+  margin-top: 25px;
+  margin-bottom: 10px;
+  color: gray;
+  background-color: gray;
+}
+hr {
+  color: gray;
+  background: gray;
+}
+h4 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }
 /*
 :root {
