--- a/swapfrontend/src/index.css
+++ b/swapfrontend/src/index.css
@@ -1,33 +1,25 @@
-* {
-  box-sizing: border-box;
-}
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*
+
+*/
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /*
-  adding styles for display
-  */
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100%;
 }
 body {
   background-color: #242424;
-  width: 70%;
-  height: 70%;
+  width: 60%;
+  height: 50%;
   border-radius: 10px;
 }
 .content-box {
@@ -76,4 +68,5 @@ body {
   padding: 10px;
   font-size: 15px;
   cursor: pointer;
+  border-radius: 8px;
 }
