--- a/swapfrontend/src/index.css
+++ b/swapfrontend/src/index.css
@@ -9,20 +9,23 @@
 :root {
   color: rgba(255, 255, 255, 0.87);
 
-  background-color: #242424;
+  background-image: url("/images/bg.svg");
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+  z-index: -1000;
 }
 body {
   background-color: #242424;
   border-radius: 10px;
   width: 60%;
+  opacity: 0.9;
+  backdrop-filter: blur(1px);
 }
 .content-box {
-  background-color: rgb(26, 147, 147);
+  background-color: rgb(16, 32, 32);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,6 +69,10 @@ body {
 }
 .custom-teal:checked {
   accent-color: rgb(26, 147, 147);
+}
+
+button {
+  z-index: 10000;
 }
 
 @media (max-width: 569px) {
