--- a/swapfrontend/src/index.css
+++ b/swapfrontend/src/index.css
@@ -4,25 +4,30 @@
 @tailwind utilities;
 
 /*
-
+overlayer
 */
+
 :root {
   color: rgba(255, 255, 255, 0.87);
-
+  /*
   background-image: url("/images/bg.svg");
+  */
+  background: #242424;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: -1000;
+  position: absolute;
 }
+
 body {
   background-color: #242424;
   border-radius: 10px;
   width: 60%;
   opacity: 0.9;
-  backdrop-filter: blur(1px);
+  position: relative;
+  z-index: 100;
 }
 .content-box {
   background-color: rgb(16, 32, 32);
@@ -41,8 +46,6 @@ body {
   align-items: start;
 }
 .title {
-  font-size: 20px;
-  gap: 9px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -72,7 +75,6 @@ body {
 }
 
 button {
-  z-index: 10000;
 }
 
 @media (max-width: 569px) {
