--- a/swapfrontend/src/index.css
+++ b/swapfrontend/src/index.css
@@ -1,3 +1,6 @@
+/* src/index.css or src/App.css */
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+
 /* src/index.css */
 @tailwind base;
 @tailwind components;
